<resources>
    <string name="app_name">Todo app</string>
    <string name="submit">Submit</string>

    <string name="toolbar">My Lists</string>
    <string name="mytask">My Task</string>
    <string name="edt_toolbar">Edit List</string>


    <string name="cancle">Cancle</string>
    <string name="ok">Ok</string>

    <string name="add">Add</string>
    <string name="filter">Filter</string>
    <string name="delete">Delete</string>
    <string name="open">Open</string>
    <string name="task_demo">Task Demo</string>

    <string name="title">TItle</string>
    <string name="subtitle">Sub Title</string>
    <string name="timing">00:00</string>

    <string name="addtaskdate">Add Task Date</string>

    <string name="task">Task</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>