<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dp_15"
        android:paddingVertical="@dimen/dp_10"
        android:background="@color/grey"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_height="wrap_content"
            android:text="@string/addtaskdate"
            android:layout_centerInParent="true"
            style="@style/toolbarStyle"
            />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtTitle"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:hint="@string/title"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginHorizontal="@dimen/dp_10"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtSubTitle"
        android:layout_below="@+id/edtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subtitle"
        android:padding="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginHorizontal="@dimen/dp_10"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtTiming"
        android:layout_below="@+id/edtSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:editable="false"
        android:hint="@string/timing"
        android:padding="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginHorizontal="@dimen/dp_10"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_below="@+id/edtTiming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_10"
        />

</RelativeLayout>